# contamination-audit

./: .env.example  .gitignore  01_download_data.py  02_ngram_baseline.py  03_embedding_retrieval.py  04_llm_judge.py  05_analyze_results.py  06_crosscheck_ngram.py  LICENSE  Makefile  README.md  iclr2026_conference (1).tex  llm_judge_openthoughts.py  llm_rescore.py  make_pipeline_figure.py  pyproject.toml  requirements.txt  run_all.bat  run_all.sh  test_api.py
configs/: datasets.yaml  models.yaml  thresholds.yaml
contamination_detection/results/: csem_annotation.csv
contamination_detection/scripts/: 10_tulu_rejudge.py  11_build_annotation_csv.py
data/: aime_2024.csv  aime_2024.json  math500.json  s1k.json
data/processed/: clean_baseline.jsonl  clean_baseline_prompts.csv  contaminated_and_perturbations.csv  manual_verdicts.csv  openthoughts_c_lex.jsonl  openthoughts_c_sem.jsonl  s1_c_lex.jsonl  s1_c_sem.jsonl  tulu_c_lex.jsonl  tulu_c_sem.jsonl  (+1 more)
notebooks/: 05_did_inference.ipynb  07_analysis.ipynb  README.md  cot_consistency.ipynb  temperature_variance.ipynb
paper/: .gitignore
results/: candidates_above_threshold.tsv  clean_baseline_dataset.csv  crosscheck.tsv  flagged_pairs.tsv  lexical_contamination.csv  manual_review_sample.tsv  ngram_hits.tsv  pilot_report.md  precision_worksheet.tsv  sample_perturbation_dataset.csv
scripts/: 00_load_datasets.py  01_ngram_filter.py  02_embedding_retrieval.py  02_semantic_retrieval.py  03_llm_judge.py  04_build_clean_set.py  05_validate_and_report.py  06_generate_perturbations.py  07_run_inference.py  08_score_answers.py  09_compute_did.py  10_compute_null_rate.py  11_cot_features.py  12_robustness_checks.py  13_build_annotation_csv.py  14_recitation_analysis.py  99_make_pipeline_figure.py  _common.py
tests/: conftest.py  test_answer_extract.py  test_embedding.py  test_judge_parsing.py  test_ngram.py
(+30 files in other folders)
