[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contamination-audit"
version = "0.1.0"
description = "Detecting MATH-500 contamination in open reasoning-model post-training datasets (s1, Tulu 3, OpenThoughts) and measuring the resulting benchmark score inflation via a difference-in-differences behavioral framework."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Arno Demarteau", email = "ademarteau@berkeley.edu" },
    { name = "Rishbha Jain" },
    { name = "Victor Ngetich" },
]
keywords = ["nlp", "benchmark-contamination", "reasoning-models", "decontamination", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "datasets>=2.18.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.7.4",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.7.0",
    "pyyaml>=6.0",
    "jsonlines>=3.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.urls]
Paper = "https://github.com/anlpsp26/contamination-audit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
